<resources>
    <string name="app_name">Kinonika</string>
    <string name="films">Films</string>
    <string name="series">Series</string>
    <string name="tv_show">TV Show</string>
    <string name="cartoons">Cartoons</string>
    <string name="plot">Plot:</string>
    <string name="comment">Comment:</string>
    <string name="poster">poster</string>
    <string name="review">Review:</string>
    <string name="name">Name:</string>
    <string name="country">Country:</string>
    <string name="year">Year:</string>
    <string name="genre">Genre:</string>
    <string name="rating_kinopoisk">IMDb:</string>
    <string name="tag">Tag:</string>
    <string name="make_review">Make review</string>
    <string name="review_title">Review</string>
    <string name="error">Error occurred</string>
    <string name="select_a_file">Select a media file</string>
    <string name="empty_field_error">Please fill in all fields</string>
    <string name="delete_image">Delete image</string>
    <string name="search">Search…</string>
    <string name="rating">Rating:</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>

    <!--<string-array name="genres">-->
        <!--<item />-->
        <!--<item>Erotic</item>-->
        <!--<item>Fantasy</item>-->
        <!--<item>Film noir</item>-->
        <!--<item>Horrors</item>-->
        <!--<item>Thriller</item>-->
        <!--<item>Talk show</item>-->
        <!--<item>Sport</item>-->
        <!--<item>Family</item>-->
        <!--<item>Reality show</item>-->
        <!--<item>Adventure</item>-->
        <!--<item>Scientific</item>-->
        <!--<item>Musical</item>-->
        <!--<item>Cartoon</item>-->
        <!--<item>Music</item>-->
        <!--<item>Mystic</item>-->
        <!--<item>Melodrama</item>-->
        <!--<item>Crime</item>-->
        <!--<item>Short</item>-->
        <!--<item>Concert</item>-->
        <!--<item>Comedy</item>-->
        <!--<item>Kinokomiks</item>-->
        <!--<item>Historical</item>-->
        <!--<item>Drama</item>-->
        <!--<item>Documentary</item>-->
        <!--<item>Children</item>-->
        <!--<item>Detective</item>-->
        <!--<item>Military</item>-->
        <!--<item>Western</item>-->
        <!--<item>Action movie</item>-->
        <!--<item>Biographical</item>-->
    <!--</string-array>-->
    <string-array name="genres">
        <item />
        <item>Аниме</item>
        <item>Эротика</item>
        <item>Фантастика</item>
        <item>Фэнтези</item>
        <item>Нуар</item>
        <item>Ужасы</item>
        <item>Триллер</item>
        <item>Ток-шоу</item>
        <item>Спорт</item>
        <item>Семейный</item>
        <item>Реалити шоу</item>
        <item>Приключения</item>
        <item>Научный</item>
        <item>Мьюзикл</item>
        <item>Мультфильм</item>
        <item>Музыка</item>
        <item>Мистика</item>
        <item>Мелодрама</item>
        <item>Криминал</item>
        <item>Короткий</item>
        <item>Концерт</item>
        <item>Комедия</item>
        <item>Кинокомикс</item>
        <item>Исторический</item>
        <item>Драма</item>
        <item>Документальный</item>
        <item>Для детей</item>
        <item>Детектив</item>
        <item>Боевик</item>
        <item>Вестерн</item>
        <item>Экшн</item>
        <item>Биография</item>
    </string-array>

    <string-array name="rating">
        <item />
        <item>One star</item>
        <item>Two stars</item>
        <item>Three stars</item>
        <item>Four stars</item>
        <item>Five stars</item>
    </string-array>
</resources>
