<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="@dimen/dialog_filter_padding">

    <TextView
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:text="@string/genre"
        android:textColor="@color/colorAccentWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/spinner_genre"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_filter_margin_bottom"
        android:backgroundTint="@color/colorAccentWhite"
        app:layout_constraintBottom_toTopOf="@id/tag"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:text="@string/tag"
        android:textColor="@color/colorAccentWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/spinner_tag"
        app:layout_constraintTop_toBottomOf="@id/spinner_genre" />

    <Spinner
        android:id="@+id/spinner_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_filter_margin_bottom"
        android:backgroundTint="@color/colorAccentWhite"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintTop_toBottomOf="@id/tag" />

    <TextView
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:text="@string/year"
        android:textColor="@color/colorAccentWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/spinner_years"
        app:layout_constraintTop_toBottomOf="@id/spinner_tag" />

    <Spinner
        android:id="@+id/spinner_years"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_filter_margin_bottom"
        android:backgroundTint="@color/colorAccentWhite"
        app:layout_constraintBottom_toTopOf="@id/rating"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:text="@string/rating"
        android:textColor="@color/colorAccentWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/spinner_rating"
        app:layout_constraintTop_toBottomOf="@id/spinner_years" />

    <Spinner
        android:id="@+id/spinner_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccentWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating" />

</android.support.constraint.ConstraintLayout>